# runtime

./: CMakeLists.txt  Dockerfile  build.sh  conanfile.py
cmake/: RUNTIMECompileOptions.cmake
examples/: CMakeLists.txt  ipc_task_sender.cpp
include/libipc/platform/linux/: condition.h  get_wait_time.h  mutex.h  sync_obj_impl.h
include/libipc/platform/linux/a0/: atomic.h  clock.h  err.c  err_macro.h  mtx.c  strconv.h  tid.c  time.c  time.h
include/runtime/protocol/: protocol.h
include/runtime_core/: global.h  productor.h  tasks.h
include/runtime_core/protocol/: protocol.h
src/: CMakeLists.txt  main.cc
src/enkiTs/: CMakeLists.txt  TaskScheduler.cc  TaskScheduler_c.cc
src/libipc/: CMakeLists.txt
src/libipc/platform/: platform.c  platform.cpp
src/libipc/platform/linux/a0/: err.h  ftx.h  mtx.h  strconv.c
src/runtime_core/: CMakeLists.txt  global.cc  productor.cc  task.cc
test/: CMakeLists.txt
